chore: improve infrastructure
