# pkg/response/user_response.go
@@ -1,0 +1,8 @@
+package response
+
+import "github.com/1111mp/gin-app/ent"
+
+// UserAPIResponse -.
+type UserAPIResponse struct {
+	APIResponse[ent.UserEntity]
+}
